Numerous CSS and Author Title Fixes
-fixed post and navbar css
-fixed usernames not showing up

--- a/src/Component/styles/Navbar.css
+++ b/src/Component/styles/Navbar.css
@@ -22,6 +22,7 @@
    list-style-type: none;
    margin-right: auto;
    margin-left: auto;
+   margin-top: 15px;
    gap: 30px;
 }
 
